logs/neg/t4877-neg.log
t4877.scala:4: error: type mismatch;
 found   : AnyRef
 required: AnyRef
  def foo: AnyRef { def bar: String } = new AnyRef { def bar = 42 }
                                        ^
t4877.scala:6: error: type mismatch;
 found   : AnyRef
 required: AnyRef
  def foo3: AnyRef { def bar(x: Int): Int } = new AnyRef { def bar(x: Int) = "abc" }
                                              ^
t4877.scala:7: error: type mismatch;
 found   : C
 required: C
  def foo4: C { def bar(x: Int): Int ; def quux(x: Int): Int } = new C { def bar(x: Int) = 5 }
                                                                 ^
t4877.scala:17: error: type mismatch;
 found   : AnyRef
 required: B.this.Bippy
    (which expands to)  AnyRef
  val x: Bippy = new AnyRef {
                 ^
four errors found
